[package]
name = "stratum"
version = "0.1.0"
edition = "2024"

[dependencies]
# logging
log = "0.4.29"
env_logger = "0.11"

# twilight
twilight-cache-inmemory = "0.17.1"
twilight-gateway = "0.17.1"
twilight-gateway-queue = "0.17.0"
twilight-model = "0.17.1"

# serde
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
twilight-http = "0.17.1"
rmp-serde = { version = "1.3.1" }

# other
rustls = "0.23.37"
chrono = "0.4.44"
futures-util = "0.3.32"
dashmap = "6.1.0"

# grpc
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"
bitflags = "2.11.0"

# guild cache retrieval
rayon = "1.11.0"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "tracing", "process", "signal"]

[build-dependencies]
tonic-prost-build = "0.14"
