[package]
name = "stratum_client"
version = "0.1.0"
edition = "2024"

[dependencies]
# common
stratum_common = { path = "../common" }
serde_json = "1.0"

# grpc
tonic = "0.14"
futures-util = "0.3.32"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "tracing", "process", "signal"]