[package]
name = "stratum_common"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde
serde = "1.0"
rmp-serde = { version = "1.3.1" }
serde_json = "1.0"

# grpc
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
bitflags = "2.11.0"

[build-dependencies]
tonic-prost-build = "0.14"

[package.metadata.cargo-machete]
ignored = ["prost", "prost-types", "tonic-prost"]