[package]
name = "stratum_torracat"
version = "0.1.0"
edition = "2024"

[dependencies]
# logging
log = "0.4.29"
env_logger = "0.11"

# common
stratum_common = { path = "../common" }
stratum_client = { path = "../client" }

# grpc
tonic = "0.14"
futures-util = "0.3.32"

# serde
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

# other
chrono = "0.4.44"

[dependencies.tokio]
version = "1"
features = ["sync", "macros", "rt-multi-thread", "tracing", "process", "signal"]
